[tool.poetry]
name = "csb2files"
version = "0.1.0"
description = ""
authors = ["Serhii Didenko <srg.dd0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.1.1"
tqdm = "^4.66.1"
openpyxl = "^3.1.2"

[tool.poetry.dependencies.numpy]
version = "1.26.0"
markers = "python_full_version >= '3.9.0' and python_full_version < '3.13.0'"

[tool.poetry.group.dev.dependencies]
nuitka = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
